--- a/index.css
+++ b/index.css
@@ -156,14 +156,14 @@ hr {
   line-height: 12px;
 }
 
-.github>img, .linked-in>img {
+.github>img, .linked-in>img, .codepen>svg {
   width: 20px;
   height: 20px;
   position: relative;
   top: 3px;
 }
 
-.github a, .linked-in a {
+.github a, .linked-in a, .codepen a {
   text-decoration: none;
 }
 
