--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ progress {
 
 .technical-skills {
     line-height: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .personal-summary {
@@ -191,4 +191,8 @@ hr {
     .side-projects p {
         font-size: 0.8em;
     }
+}
+
+.last {
+    margin-bottom: 131px;
 }
