ADD: a new class to support content with width above 100px

--- a/index.css
+++ b/index.css
@@ -88,6 +88,12 @@ span.other-names {
     grid-template-columns: 100px 2fr 20px;
 }
 
+.front-end_longItem {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 200px 2fr 50px;
+}
+
 progress {
     width: 200px;
     height: 10px;
