--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ html {
 
 body {
     /* height: 100vh; */
-    padding: 30px;
+    padding: 30px 30px 0 20px;
     margin: 0;
     border: 20px solid var(--color);
     background: #99999900;
@@ -41,7 +41,7 @@ h3 {
     align-items: center;
     font-weight: normal;
     font-family: var(--header);
-    margin: 15px 0;
+    margin: 0;
 }
 
 h3:before,
@@ -138,8 +138,8 @@ progress {
 
 .work-experience {
     padding: 10px;
-    margin-bottom: 20px;
-    margin-top: 15px;
+    /* margin-bottom: 20px;
+    margin-top: 15px; */
 }
 
 .referees p {
@@ -200,5 +200,5 @@ hr {
 }
 
 .last {
-    margin-bottom: 121px;
+    margin-bottom: 80px;
 }
