--- a/index.css
+++ b/index.css
@@ -166,6 +166,20 @@ hr {
     line-height: 12px;
 }
 
+.last {
+    margin-bottom: 80px;
+}
+
+mark.highlight {
+    background-color: yellow;
+    color: black;
+    padding: 3px;
+    letter-spacing: -1px;
+    line-height: 20px;
+    font-size: 13px;
+    font-style: italic;
+}
+
 .github > img,
 .linked-in > img,
 .codepen > svg {
@@ -197,8 +211,4 @@ hr {
     .side-projects p {
         font-size: 0.8em;
     }
-}
-
-.last {
-    margin-bottom: 80px;
 }
