--- a/index.css
+++ b/index.css
@@ -138,7 +138,7 @@ progress {
 
 .work-experience {
 	padding: 10px;
-	margin-bottom: 20px;
+	margin-bottom: 14px;
 	/* margin-top: 15px; */
 }
 
@@ -155,7 +155,7 @@ hr {
 }
 
 .side-projects {
-	height: 190px;
+	height: 230px;
 }
 
 .side-projects a {
@@ -163,13 +163,18 @@ hr {
 	color: var(--text);
 }
 
+.side-projects a:hover {
+	border-bottom: 2px solid var(--color);
+	transition: all 2s;
+}
+
 .side-projects p {
 	line-height: 12px;
 }
 
 .last {
-	margin-top: 25px;
-	margin-bottom: 40px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 mark.highlight {
