--- a/index.css
+++ b/index.css
@@ -121,27 +121,42 @@ progress {
 }
 
 .education {
-	padding-top: 27px;
-	line-height: 5px;
+	padding-top: 7px;
+	/* line-height: 5px; */
 }
 
 .education h5 {
 	font-size: 15px;
 	font-weight: 500;
 	font-family: var(--header);
+	margin-bottom: 5px;
+	margin-top: 5px;
 }
 
 .technical-skills {
 	margin-top: 0px;
 	line-height: 5px;
-	margin-bottom: 39px;
+	margin-bottom: 10px;
 }
 
-.technical h4 {
+.technical > h4 {
+	margin-top: 10px;
+	margin-bottom: 5px;
 	font-size: 15px;
 	font-weight: 500;
 	font-family: var(--header);
 }
+
+.each-experience h4 {
+	margin-top: 10px;
+	margin-bottom: 5px;
+}
+
+.technical-skills > h3 {
+	margin-bottom: 10px;
+	padding-bottom: 10px;
+}
+
 
 .personal-summary {
 	padding: 10px;
@@ -152,7 +167,6 @@ progress {
 }
 
 .work-experience {
-	padding-bottom: 10px;
 	margin-bottom: 10px;
 	/* margin-top: 10px; */
 }
@@ -169,16 +183,16 @@ progress {
 
 hr {
 	margin-left: -40px;
-	margin-top: 80px;
+	/* margin-top: 80px; */
 	margin-right: -40px;
-	border: 20px solid var(--color);
+	border: 5px solid var(--color);
 }
 
 .side-projects {
 	/* height: 230px; */
 }
 
-.side-projects a {
+.side-projects a, .info-contact a {
 	text-decoration: none;
 	color: var(--text);
 }
@@ -193,8 +207,13 @@ hr {
 }
 
 .last {
-	margin-top: 20px;
+	/* margin-top: 20px; */
 	margin-bottom: 10px;
+}
+.last h4 {
+	/* margin-top: 20px; */
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
 mark.highlight {
